testsuite/tests/parser/should_fail/typeops_C.hs
type X = 1 + + 2
