testsuite/tests/parser/should_fail/typeops_C.stderr

typeops_C.hs:1:14: error: Operator applied to too few arguments: +
